# SlicerFMRSI

./: CMakeLists.txt  generarDoc.sh  sh.exe.stackdump
CFileParser/: CMakeLists.txt  qSlicerCFileParserModule.cxx  qSlicerCFileParserModule.h  qSlicerCFileParserModuleWidget.cxx  qSlicerCFileParserModuleWidget.h
CFileParser/Logic/: vtkSlicerCFileParserLogic.cxx  vtkSlicerCFileParserLogic.h
CFileParser/Resources/: qSlicerCFileParserModule.qrc
CFileParser/Resources/UI/: qSlicerCFileParserFooBarWidget.ui  qSlicerCFileParserModuleWidget.ui
CFileParser/Widgets/: qSlicerCFileParserFooBarWidget.cxx  qSlicerCFileParserFooBarWidget.h
PFileParser/: CMakeLists.txt  PFileParser.py
PFileParser/fMRSICore/: ComplexLibraryClass.py  FigureClass.py  MatLibraryClass.py  PFileClass.py  PlotClass.py  RenderClass.py  SpectrumClass.py  UnitClass.py  csaps.py  ejemploCodigo.txt
PFileParser/versions/: PFileParser_V2_frame_slicer.py  PlotClass_V2_reversed_plot_Nth_frame.py
doc/: PFileParser.txt
exp/: CMakeLists.txt  vtkMRMLCFileParserStorageNode.cxx  vtkMRMLCFileParserStorageNode.h
